# advent_of_code

./: .gitignore  Cargo.toml  pyproject.toml
Python/2024/: day_08.py
Rust/: lib.rs
Rust/advent_2024/: day_01.rs  day_02.rs  day_03.rs  day_06.rs  day_08.rs
benchmarks/: bench_2024.rs
src/: lib.rs
src/advent_2024/: bench.rs  day_01.rs  day_02.rs  day_03.rs
src/tools/: txt_reader.rs
