[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"

[lib]
name = "advent_of_code"
path = "src/lib.rs"

[[bench]]
name = "2024"
path = "benchmarks/bench_2024.rs"
harness = false


[dependencies]
criterion = "0.5.1"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.215"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
overflow-checks = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = false
overflow-checks = false

[profile.dev]
lto = false
codegen-units = 1
opt-level = 0
debug = true
