[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"

[lib]
name = "advent_of_code"
path = "Rust/lib.rs"


[dependencies]
criterion = "0.5.1"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.215"
test-log = "0.2.16"

[profile.release]
debug = false
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false

[profile.bench]
debug = false
lto = true
codegen-units = 1
opt-level = 3
overflow-checks = false

[profile.dev]
debug = true
lto = false
codegen-units = 1
opt-level = 0

[profile.test]
debug = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false
